--- a/Xam.LaGalerna/Xam.LaGalerna.Android/Xam.LaGalerna.Android.csproj
+++ b/Xam.LaGalerna/Xam.LaGalerna.Android/Xam.LaGalerna.Android.csproj
@@ -118,6 +118,9 @@
     <PackageReference Include="HtmlAgilityPack">
       <Version>1.11.4</Version>
     </PackageReference>
+    <PackageReference Include="SkiaSharp.Views.Forms">
+      <Version>1.68.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamanimation">
       <Version>1.2.0</Version>
     </PackageReference>
