--- a/Xam.LaGalerna/Xam.LaGalerna.iOS/Xam.LaGalerna.iOS.csproj
+++ b/Xam.LaGalerna/Xam.LaGalerna.iOS/Xam.LaGalerna.iOS.csproj
@@ -158,6 +158,9 @@
     <PackageReference Include="SkiaSharp.Views.Forms">
       <Version>1.68.0</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Forms.VideoPlayer">
+      <Version>1.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Xamanimation">
       <Version>1.2.0</Version>
     </PackageReference>
