--- a/Xam.LaGalerna/Xam.LaGalerna/Xam.LaGalerna.csproj
+++ b/Xam.LaGalerna/Xam.LaGalerna/Xam.LaGalerna.csproj
@@ -5,10 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Resx\**" />
+    <EmbeddedResource Remove="Resx\**" />
+    <None Remove="Resx\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="Services\NavigationService.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Assets\data\sections.json" />
+    <None Remove="Assets\data\spotify.json" />
+    <None Remove="Assets\Error.png" />
     <None Remove="Assets\load.gif" />
     <None Remove="Assets\logo.png" />
     <None Remove="Assets\logo_big.png" />
@@ -18,6 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Assets\data\sections.json" />
+    <EmbeddedResource Include="Assets\data\spotify.json" />
+    <EmbeddedResource Include="Assets\Error.png" />
     <EmbeddedResource Include="Assets\load.gif" />
   </ItemGroup>
 
@@ -35,6 +47,7 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.2" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="SkiaSharp.Views.Forms" Version="1.68.0" />
     <PackageReference Include="Xam.Forms.VideoPlayer" Version="1.0.2" />
     <PackageReference Include="Xamanimation" Version="1.2.0" />
@@ -61,16 +74,15 @@
     <EmbeddedResource Update="Views\Base\LoadingView.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Base\NetErrorView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\RssDetailView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\SpotifyPlayListView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Resx\" />
   </ItemGroup>
 
   <ItemGroup>
